Fix Modal and upgrade all html file to bootstrap 4

--- a/client/src/app/_layouts/footer.component.html
+++ b/client/src/app/_layouts/footer.component.html
@@ -1,5 +1,5 @@
 
-<footer class="bg-faded footer-css">
+<footer class="bg-faded">
     <ul class="nav justify-content-center ">
         <li class="nav-item">
             <a class="nav-link active" href="#">Swap News</a>
