--- a/client/src/app/_layouts/header.component.html
+++ b/client/src/app/_layouts/header.component.html
@@ -1,48 +1,43 @@
-
-
 <header>
-    <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-      <div class="navbar-header">
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
-            aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-            <a class="navbar-brand" href="/">
-                <img src="../../images/VinaSwapProjectLogo.png" height="50px" />
-            </a>
-      </div>
-          <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="nav navbar-nav navbar-right">
-                  <li class="nav-item" *ngIf="!isLogin">
-                      <a class="nav-link" routerLink="/login" routerLinkActive="active">Login</a>
-                  </li>
-                  <li class="nav-item" *ngIf="!isLogin">
-                      <a class="nav-link" routerLink="/register" routerLinkActive="active">Register</a>
-                  </li>
-                  <li class="nav-item" *ngIf="isLogin">
-                      <a class="nav-link" routerLink="/logout" routerLinkActive="active">Logout</a>
-                  </li>
-                  <li class="nav-item" *ngIf="isLogin">
-                     <div id="noti_Container">
-                    <div id="noti_Counter"></div>   <!--SHOW NOTIFICATIONS COUNT.-->
-
-              <!--A CIRCLE LIKE BUTTON TO DISPLAY NOTIFICATION DROPDOWN.-->
-              <div id="noti_Button"><span class="glyphicon glyphicon-bell"></span></div>
-
-              <!--THE NOTIFICAIONS DROPDOWN BOX.-->
-              <div id="notifications">
-
-                  <h3>Notifications</h3>
-                  <div style="height:300px;" class="scroll">
-
-                  </div>
-
-                </div>
-              </div>
-
+  <nav class="nav navbar-toggleable-md navbar-light bg-faded ">
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+          aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+          </button>
+          <a class="navbar-brand" href="/">
+              <img src="../../images/VinaSwapProjectLogo.png" class="img-fluid" />
+          </a>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="nav navbar-nav ">
+                <li class="nav-item " *ngIf="!isLogin">
+                    <a class="nav-link " routerLink="/login" routerLinkActive="active">Login</a>
                 </li>
-              </ul>
-          </div>
-    </nav>
+                <li class="nav-item" *ngIf="!isLogin">
+                    <a class="nav-link" routerLink="/register" routerLinkActive="active">Register</a>
+                </li>
+                <li class="nav-item" *ngIf="isLogin">
+                       <div id="noti_Container">
+                        <div id="noti_Counter"></div>   <!--SHOW NOTIFICATIONS COUNT.-->
+
+                  <!--A CIRCLE LIKE BUTTON TO DISPLAY NOTIFICATION DROPDOWN.-->
+                  <div id="noti_Button"><i class="material-icons">supervisor_account</i></div>
+
+                  <!--THE NOTIFICAIONS DROPDOWN BOX.-->
+                  <div id="notifications">
+
+                      <h3>Notifications</h3>
+                      <div style="height:300px;" class="scroll">
+
+                      </div>
+
+                    </div>
+                  </div>
+                </li>
+                <li class="nav-item" *ngIf="isLogin">
+                    <a class="nav-link" routerLink="/logout" routerLinkActive="active">Logout</a>
+                  </li>
+                </ul>
+        </div>
+  </nav>
 
 </header>
