--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,4 +1,4 @@
-﻿<div class="col-md-6 col-md-offset-3">
+﻿<div class="col-md-6 offset-md-3">
     <h2>Register</h2>
     <form #f="ngForm" (ngSubmit)="onSubmit(f)">
         <div class="form-group">
