--- a/client/src/app/register/verification.component.html
+++ b/client/src/app/register/verification.component.html
@@ -6,7 +6,7 @@
   <div class="container">
     <div class="jumbotron" style="text-align:center;">
       <h1>One More Step To Success</h1>
-      <p>link</p>
+      <p>Please check your email to verify account</p>
     </div>
   </div>
 </body>
