--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -6,19 +6,27 @@ input[type=text], input[type=password] {
     border: 1px solid #ccc;
     box-sizing: border-box;
 }
-input[type=search]{
-  width: 100%;
-  /*padding: 12px 20px;*/
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
+.searchBar{
+  position:absolute;
+  top:70%;
+  left:50%;
+  transform:translate(-50%,-50%);
+  -ms-transform:translate(-50%,-50%);
+  text-align:center!important;
 }
+
 footer {
     clear: left;
     align-content: center;
+    bottom: 0;
+    position: fixed;
+    width: 100%;
   }
-  .text1{
+header{
+    top: 0;
+    width: 100%;
+}
+.text1{
   position: absolute;
    top: 700px;
    left: 80px;
@@ -80,7 +88,7 @@ footer {
        width:430px;
        position:absolute;
        top:30px;
-       left:0;
+       right:0;
        background:#FFF;
        border:solid 1px rgba(100, 100, 100, .20);
        -webkit-box-shadow:0 3px 8px rgba(0, 0, 0, .20);
@@ -96,7 +104,7 @@ footer {
        border:10px solid #CCC;
        border-color:transparent transparent #FFF;
        margin-top:-20px;
-       margin-left:10px;
+       margin-left:400px;
    }
    div.scroll {
     overflow:auto;
@@ -245,27 +253,27 @@ span.psw {
 }
 
 /* The Modal (background) */
-.modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+/*.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
     padding-top: 60px;
-}
+}*/
 
 /* Modal Content/Box */
-.modal-content {
+/*.modal-content {
     background-color: #fefefe;
-    margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+    margin: 5% auto 15% auto;
     border: 1px solid #888;
-    width: 30%; /* Could be more or less, depending on screen size */
-}
+    width: 30%;
+}*/
 
 /* The Close Button (x) */
 .close {
@@ -382,15 +390,15 @@ span.psw {
   text-align: left;
 }
 .circle-rating{
+  position:absolute;
   width: 50%;
-	height: 50%;
-
-	-moz-border-radius: 50%;
-	-webkit-border-radius: 50%;
-	border-radius: 50%;
-  display: inline-block;
-  margin-top: 25%;
-  margin-left: 25%;
+  height: 50%;
+  border-radius: 50%;
+  top:50%;
+  left:50%;
+  transform:translate(-50%,-50%);
+  -ms-transform:translate(-50%,-50%);
+  text-align:center!important;
   background-color: #e9dd91;
 }
 .circle-rating-review{
