Dịch tiếng Việt

--- a/client/src/app/foundation/faqs.component.html
+++ b/client/src/app/foundation/faqs.component.html
@@ -6,29 +6,34 @@
 
 </head>
 <body>
-<div class="web-background-coloraboutus">
+<div class="web-background-color margin-layout">
   <div class="w3-display-container w3-content w3-section backgroundcolor" style="max-width:1350px">
       <img src="../images/cover1.png" alt="background-image" width="100%" height="700px">
   </div>
   <div class="row">
-    <div class="col-md-10 col-md-offset-1 col-xs-offset-1" style=" background-color:#f7f7f7;">
+    <div class="col-md-10 offset-md-1 offset-xs-1" style=" background-color:#f7f7f7;">
       <div id="flip">
-        <h3 class="faqstitle">What is Swappal?</h3>
+        <h3 class="faqstitle">Swappal là gì?</h3>
       </div>
-      <div id="panel">Swappal is a website for skills exchanging without costing money or fee.
+      <div id="panel">Swappal là một trang web dùng để giao lưu trao đổi các kĩ năng giữa mọi người lẫn nhau mà không
+        cần bất cứ khoản chỉ phí nào.
         <br>
-        You could learn new skill by exchanging among members around Vietnam.
+        Bạn có thể trao dồi thêm kĩ năng mới cho mình tại Swappal.
+        <br>
+        Đặc biệt, Swappal cũng đem mọi người đến gần nhau hơn.
     </div>
     <div id="flip2">
-      <h3 class="faqstitle">How do I join in?</h3>
+      <h3 class="faqstitle">Làm thế nào để đăng ký?</h3>
     </div>
-    <div id="panel2">Joining our bartering community is free and easy.Simply <a href="register">create your account</a>
-    and you are all set to start swapping.
+    <div id="panel2">Để tham gia vào cộng đồng của chúng tôi rất đơn giản về dễ dàng.Nhấp vào <a href="register">ĐĂNG KÝ</a>
+    và bạn có thể bắt đầu việc trao đổi với những người khác.
   </div>
   <div id="flip3">
-    <h3 class="faqstitle">Do i have to pay any fees?</h3>
+    <h3 class="faqstitle">Tôi có cần phải trả cho bất cứ chi phí nào không?</h3>
   </div>
-  <div id="panel3">No,Swappal is free!There are no transaction fees, no listing fees and no membership fees.
+  <div id="panel3">Câu trả lời là không,Swappal là một cộng đồng, mọi người trao đổi với nhau với mục tiêu là phát triển bản thân
+    <br>
+    KHÔNG CÓ BẤT KÌ CHI PHÍ NÀO CHO THÀNH VIÊN SWAPPAL !
 </div>
 </div>
 
