--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="web-background-color">
-  <div >
+  <div>
       <img src="../images/cover2.png"  class="img-fluid" alt="background-image">
       <div class="searchBar">
         <form class="form-inline">
@@ -18,7 +18,7 @@
     <div class="row">
       <div class="col-md-10 offset-md-1 offset-xs-1" style=" background-color:#f7fade;padding:10px;">
         <p style="margin-top:10px;" >
-          <b>User Review</b><br><var>This is great website</var>
+          <b>Người dùng đánh giá</b><br><var>Đây là một website rất tốt</var>
         </p>
       </div>
     </div>
@@ -39,7 +39,7 @@
                   <div class="flex-news-header-content">
                     <p>Communication skills — Listening, speaking and writing. Employers want people who can accurately
                         interpret what others are saying and organize and express their thoughts clearly.
-                        <a href="#seemore" style="color:#4eb1ba">Read More</a></p>
+                        <a href="#seemore" style="color:#4eb1ba">Xem thêm...</a></p>
                   </div>
                 </div>
               </div>
@@ -50,21 +50,21 @@
                     <img src="../images/news1.jpg" alt="news1" class="img-fluid">
                     <div class="flex-news-children-title">
                       <b>Christopher Gray on How to Be a Social Entrepreneur</b>
-                      <a href="#seemore" style="color:#4eb1ba">Read More</a>
+                      <a href="#seemore" style="color:#4eb1ba">Xem thêm...</a>
                     </div>
                 </div>
                 <div class="col-md-4">
                   <img src="../images/news2.jpg" alt="news1" class="img-fluid">
                   <div class="flex-news-children-title">
                     <b>One Man’s Journey From Prison to College</b>
-                    <a href="#seemore" style="color:#4eb1ba">Read More</a>
+                    <a href="#seemore" style="color:#4eb1ba">Xem thêm...</a>
                   </div>
                 </div>
                 <div class="col-md-4">
                   <img src="../images/news3.jpg" alt="news1" class="img-fluid">
                   <div class="flex-news-children-title">
                     <b>The Innovation Campus: Building Better Ideas</b>
-                    <a href="#seemore" style="color:#4eb1ba">Read More</a>
+                    <a href="#seemore" style="color:#4eb1ba">Xem thêm...</a>
                   </div>
                 </div>
 
@@ -74,13 +74,14 @@
         <div class="col-md-2" style="background-color:white;" >
           <div class="flex-container-column">
             <div class="flex-highestrating-title">
-              <h3>HIGHEST RATING</h3>
+              <h3>THÀNH VIÊN ƯU TÚ</h3>
             </div>
             <div class="flex-highestrating-content">
               <!-- <ul>
                 <li role="presentation"> -->
                   <div class="flex-highestrating-item" style="text-align:center;border-radius:50px;">
-                    <a class="nav-link" routerLink="/profile" routerLinkActive="active">{{profile.name}}</a>
+                    <!-- <a class="nav-link" routerLink="/profile" routerLinkActive="active">{{profile.name}}</a> -->
+                    Comming soon
                   </div>
                 <!-- </li>
               </ul> -->
