--- a/client/src/app/_layouts/footer.component.html
+++ b/client/src/app/_layouts/footer.component.html
@@ -2,16 +2,16 @@
 <footer class="bg-faded">
     <ul class="nav justify-content-center ">
         <li class="nav-item">
-            <a class="nav-link active" href="#">Swap News</a>
+            <a class="nav-link active" href="#">Tin tức</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Swap It</a>
+            <a class="nav-link" href="#">Trao đổi</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" routerLink="/aboutus" routerLinkActive="active">About Us</a>
+            <a class="nav-link" routerLink="/aboutus" routerLinkActive="active">Về Chúng Tôi</a>
         </li>
         <li class="nav-item ">
-            <a class="nav-link" routerLink="/contactus" routerLinkActive="active">Contact Us</a>
+            <a class="nav-link" routerLink="/contactus" routerLinkActive="active">Liên Hệ</a>
         </li>
         <li class="nav-item ">
             <a class="nav-link" routerLink="/faqs" routerLinkActive="active">FAQs</a>
