--- a/client/src/app/foundation/aboutus.component.html
+++ b/client/src/app/foundation/aboutus.component.html
@@ -2,24 +2,24 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
     crossorigin="anonymous" />
 </head>
-<div class="web-background-coloraboutus">
-  <div class="w3-display-container w3-content w3-section backgroundcolor" style="max-width:1350px">
-      <img src="../images/AboutUsCover2.png" alt="background-image" width="100%" height="550">
+<div class="web-background-color margin-layout">
+  <div>
+      <img src="../images/AboutUsCover2.png" class="img-fluid" alt="background-image">
   </div>
   <div class="row">
-    <div class="col-md-10 col-md-offset-1 col-xs-offset-1" style=" background-color:#f7f7f7;">
-            <b><h3 class="textaboutus">Our Story</h3></b>
+    <div class="col-md-10 offset-md-1 offset-xs-1" style=" background-color:#f7f7f7;">
+            <b><h3 class="textaboutus">Câu chuyện</h3></b>
             <div class="contentaboutus">
               <br>
-         <p>Its all start with an idea to bring up people who
+         <p>Mọi thứ bắt nguồn từ những con người có đam mê
               <br>
-              have passion in learning new things together.
+              học hỏi những kỹ năng lẫn nhau.
               <br>
-              The community built based on trust among
+              Cộng đồng này được xây dựng dựa trên những nhu cầu ấy
               <br>
-              member across Viet Nam and all over the
+              phục vụ cho mọi người Việt Nam nói riêng
               <br>
-              world
+              và toàn thế giới nói chung
             </p>
           </div>
          <hr/>
