--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,15 +1,17 @@
-﻿<div class="col-md-6 offset-md-3">
-    <h2>Register</h2>
-    <form #f="ngForm" (ngSubmit)="onSubmit(f)">
-        <div class="form-group">
-            <input type="email" class="form-control" name="email" placeholder="Email" ngModel required>
-        </div>
-        <div class="form-group">
-            <input type="password" class="form-control" name="pwd" placeholder="Password" ngModel required minlength="8" maxlength="64">
-        </div>
-        <div class="form-group">
-            <button type="submit" class="btn btn-primary">Register</button>
-            <button type="button" class="btn btn-danger" (click)="goBack()">Back</button>
-        </div>
-    </form>
+<div class="web-background-color" style="height:100%;">
+  <div class="col-md-6 offset-md-3">
+      <h2>Đăng Ký</h2>
+      <form #f="ngForm" (ngSubmit)="onSubmit(f)">
+          <div class="form-group">
+              <input type="email" class="form-control" name="email" placeholder="Email" ngModel required>
+          </div>
+          <div class="form-group">
+              <input type="password" class="form-control" name="pwd" placeholder="Mật khẩu" ngModel required minlength="8" maxlength="64">
+          </div>
+          <div class="form-group">
+              <button type="submit" class="btn btn-primary">Đăng Ký</button> 
+              <button type="button" class="btn btn-danger" (click)="goBack()">Quay lại</button>
+          </div>
+      </form>
+  </div>
 </div>
