--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -8,23 +8,33 @@ input[type=text], input[type=password] {
 }
 .searchBar{
   position:absolute;
-  top:70%;
+  top:65%;
   left:50%;
   transform:translate(-50%,-50%);
   -ms-transform:translate(-50%,-50%);
   text-align:center!important;
+}
+.margin-layout{
+  margin-bottom: 3%;
+}
+html, body {
+
+    height:100%;
 }
 
 footer {
     clear: left;
     align-content: center;
     bottom: 0;
-    position: fixed;
     width: 100%;
+    position: fixed;
+
   }
+
 header{
     top: 0;
     width: 100%;
+    position: relative;
 }
 .text1{
   position: absolute;
@@ -53,6 +63,15 @@ header{
 }
 .contentaboutus{
   text-align: center;
+}
+.noti-item{
+  height: 60px;
+  width: 430px;
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+  background-color: red;
+  background-color: #ebf5f3;
 }
 #noti_Container {
         position:relative;
@@ -85,6 +104,7 @@ header{
 
    #notifications {
        display:none;
+       height: 300px;
        width:430px;
        position:absolute;
        top:30px;
@@ -93,6 +113,8 @@ header{
        border:solid 1px rgba(100, 100, 100, .20);
        -webkit-box-shadow:0 3px 8px rgba(0, 0, 0, .20);
        z-index: 1;
+       min-width:300px;
+       overflow-y: auto;
    }
 
    #notifications:before {
