Log in Facebook UI, confirm password, change

--- a/client/src/app/_layouts/header.component.html
+++ b/client/src/app/_layouts/header.component.html
@@ -5,7 +5,7 @@
           <span class="navbar-toggler-icon"></span>
           </button>
           <a class="navbar-brand" href="/">
-              <img src="../../images/VinaSwapProjectLogo.png" class="img-fluid" />
+              <img src="../../images/VinaSwapProjectLogo.png" class="img-fluid" style="margin-left:50px;"/>
           </a>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="nav navbar-nav ">
