--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -1,6 +1,24 @@
+<!-- <script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '1694410110862800',
+      xfbml      : true,
+      version    : 'v2.9'
+    });
+    FB.AppEvents.logPageView();
+  };
+
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+</script> -->
 <div class="web-background-color" style="height:100%;">
   <div class="row">
-      <div class="col-md-6 offset-md-3">
+      <div class="col-md-6 offset-md-3 col-xs-6 offset-xs-3">
           <h2>Đăng Nhập</h2>
 
           <form #f="ngForm" (ngSubmit)="onSubmit(f)">
@@ -14,9 +32,17 @@
                   <button type="submit" class="btn btn-primary">Đăng Nhập</button>
                   <a [routerLink]="['/register']" class="btn btn-link">Đăng Ký</a>
               </div>
+              <div class="form-group">
+                <button class="btn-social-facebook"></button>
+              </div>
+              <div class="form-group">
+                <button class="btn-social-google"></button>
+              </div>
           </form>
       </div>
   </div>
+
+
   <!-- Button trigger modal -->
 
   <!-- Modal -->
@@ -27,16 +53,17 @@
           <!-- Tell us -->
           <form #a="ngForm" (ngSubmit)="onCreateProfile(a)">
             <label for="InputTellUs"><p class="glyphicon glyphicon-user"></p> Tell us about you</label>
-            <input type="input" name="name" ngModel class="form-control" id="InputTellUs" placeholder="What's your name?">
+            <input type="input" name="name" ngModel class="form-control" id="InputTellUs" placeholder="What's your name?" required>
             <br>
             <div class="row">
-              <div class="col-md-7">
-                <input type="date">
-              </div>
               <div class="col-md-5">
-                  <label for="GenderRadio">Gender</label>
-                  <label class="radio-inline"><input type="radio" name="gender" ngModel>Male</label>
-                  <label class="radio-inline"><input type="radio" name="gender" ngModel>Female</label>
+                <input type="date" ngModel name="dob" class="form-control" required>
+              </div>
+              <div class="col-md-7">
+                  <label >Gender</label>
+                  <input type="radio" name="gender" value="Male" ngModel required> Male
+                  <input type="radio" name="gender" value="Female" ngModel required> Female<br>
+
               </div>
             </div>
             <hr>
@@ -55,6 +82,7 @@
                 <button type="submit" class="btn btn-info" name="done">Done</button>
               </div>
             </div>
+
           </form>
 
       </div>
