--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,5 +1,5 @@
 <div class="web-background-color" style="height:100%;">
-  <div class="col-md-6 offset-md-3">
+  <div class="col-md-6 offset-md-3 col-xs-6 offset-xs-3">
       <h2>Đăng Ký</h2>
       <form #f="ngForm" (ngSubmit)="onSubmit(f)">
           <div class="form-group">
@@ -9,8 +9,17 @@
               <input type="password" class="form-control" name="pwd" placeholder="Mật khẩu" ngModel required minlength="8" maxlength="64">
           </div>
           <div class="form-group">
-              <button type="submit" class="btn btn-primary">Đăng Ký</button> 
+              <input type="password" name="repwd"class="form-control" placeholder="Xác nhận mật khẩu" ngModel required minlength="8" maxlength="64">
+          </div>
+          <div class="form-group">
+              <button type="submit" class="btn btn-primary">Đăng Ký</button>
               <button type="button" class="btn btn-danger" (click)="goBack()">Quay lại</button>
+          </div>
+          <div class="form-group">
+            <button class="btn-social-facebook"></button>
+          </div>
+          <div class="form-group">
+            <button class="btn-social-google"></button>
           </div>
       </form>
   </div>
