--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -1,21 +1,3 @@
-<!-- <script>
-  window.fbAsyncInit = function() {
-    FB.init({
-      appId      : '1694410110862800',
-      xfbml      : true,
-      version    : 'v2.9'
-    });
-    FB.AppEvents.logPageView();
-  };
-
-  (function(d, s, id){
-     var js, fjs = d.getElementsByTagName(s)[0];
-     if (d.getElementById(id)) {return;}
-     js = d.createElement(s); js.id = id;
-     js.src = "//connect.facebook.net/en_US/sdk.js";
-     fjs.parentNode.insertBefore(js, fjs);
-   }(document, 'script', 'facebook-jssdk'));
-</script> -->
 <div class="web-background-color" style="height:100%;">
   <div class="row">
       <div class="col-md-6 offset-md-3 col-xs-6 offset-xs-3">
@@ -32,13 +14,37 @@
                   <button type="submit" class="btn btn-primary">Đăng Nhập</button>
                   <a [routerLink]="['/register']" class="btn btn-link">Đăng Ký</a>
               </div>
-              <div class="form-group">
-                <button class="btn-social-facebook"></button>
-              </div>
-              <div class="form-group">
-                <button class="btn-social-google"></button>
-              </div>
           </form>
+          <div class="form-group">
+            <button class="btn-social-facebook" (click)="signIn('facebook')"></button>
+            <!-- <div *ngIf="user">
+            <table>
+              <tr>
+                <td>Name:</td>
+                <td>{{user.name}}</td>
+              </tr>
+              <tr>
+                <td>Email</td>
+                <td>{{user.email}}</td>
+              </tr>
+              <tr>
+                <td>UID</td>
+                <td>{{user.uid}}</td>
+              </tr>
+              <tr>
+                <td>Provider</td>
+                <td>{{user.provider}}</td>
+              </tr>
+              <tr>
+                <td>Image</td>
+                <td>{{user.image}}</td>
+              </tr>
+            </table>
+          </div> -->
+          </div>
+          <div class="form-group">
+            <button class="btn-social-google"></button>
+          </div>
       </div>
   </div>
 
