--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -17,33 +17,9 @@
           </form>
           <div class="form-group">
             <button class="btn-social-facebook" (click)="signIn('facebook')"></button>
-            <!-- <div *ngIf="user">
-            <table>
-              <tr>
-                <td>Name:</td>
-                <td>{{user.name}}</td>
-              </tr>
-              <tr>
-                <td>Email</td>
-                <td>{{user.email}}</td>
-              </tr>
-              <tr>
-                <td>UID</td>
-                <td>{{user.uid}}</td>
-              </tr>
-              <tr>
-                <td>Provider</td>
-                <td>{{user.provider}}</td>
-              </tr>
-              <tr>
-                <td>Image</td>
-                <td>{{user.image}}</td>
-              </tr>
-            </table>
-          </div> -->
           </div>
           <div class="form-group">
-            <button class="btn-social-google"></button>
+            <button class="btn-social-google" (click)="signIn('google')"></button>
           </div>
       </div>
   </div>
