--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -5,7 +5,7 @@
 
           <form #f="ngForm" (ngSubmit)="onSubmit(f)">
               <div class="form-group">
-                  <input type="email" class="form-control" name="email" placeholder="Email" ngModel required>
+                  <input type="input" class="form-control" name="email" placeholder="Email" ngModel required>
               </div>
               <div class="form-group">
                   <input type="password" class="form-control" name="pwd" placeholder="Mật khẩu" ngModel required>
