--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -18,9 +18,9 @@
           <div class="form-group">
             <button class="btn-social-facebook" (click)="signIn('facebook')"></button>
           </div>
-          <div class="form-group">
+          <!-- <div class="form-group">
             <button class="btn-social-google" (click)="signIn('google')"></button>
-          </div>
+          </div> -->
       </div>
   </div>
 
