--- a/client/src/app/_layouts/footer.component.html
+++ b/client/src/app/_layouts/footer.component.html
@@ -5,10 +5,10 @@
             <a class="nav-link active" href="#">Tin tức</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Trao đổi</a>
+            <a class="nav-link" href="#">Tìm kiếm</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" routerLink="/aboutus" routerLinkActive="active">Về Chúng Tôi</a>
+            <a class="nav-link" routerLink="/aboutus" routerLinkActive="active">Về Swappal</a>
         </li>
         <li class="nav-item ">
             <a class="nav-link" routerLink="/contactus" routerLinkActive="active">Liên Hệ</a>
