--- a/client/src/app/foundation/aboutus.component.html
+++ b/client/src/app/foundation/aboutus.component.html
@@ -8,18 +8,17 @@
   </div>
   <div class="row">
     <div class="col-md-10 offset-md-1 offset-xs-1" style=" background-color:#f7f7f7;">
-            <b><h3 class="textaboutus">Câu chuyện</h3></b>
+            <b><h3 class="textaboutus">Về Swappal</h3></b>
             <div class="contentaboutus">
               <br>
-         <p>Mọi thứ bắt nguồn từ những con người có đam mê
+         <p>Bắt nguồn từ một ý tưởng tập hợp những con người có cùng một niềm đam mê
+
               <br>
-              học hỏi những kỹ năng lẫn nhau.
+              với việc học hỏi những điều mới lạ với nhau.
               <br>
-              Cộng đồng này được xây dựng dựa trên những nhu cầu ấy
+              Cộng đồng  Swappal được hình thành dựa trên sự tin tưởng giữa các thành viên
               <br>
-              phục vụ cho mọi người Việt Nam nói riêng
-              <br>
-              và toàn thế giới nói chung
+             đến từ khắp đất nước việt nam và thế giới
             </p>
           </div>
          <hr/>
