--- a/client/src/app/foundation/faqs.component.html
+++ b/client/src/app/foundation/faqs.component.html
@@ -15,18 +15,15 @@
       <div id="flip">
         <h3 class="faqstitle">Swappal là gì?</h3>
       </div>
-      <div id="panel">Swappal là một trang web dùng để giao lưu trao đổi các kĩ năng giữa mọi người lẫn nhau mà không
-        cần bất cứ khoản chỉ phí nào.
+      <div id="panel">Swappal là một website dành cho việc trao đổi kĩ năng giữa những người dùng mà không tốn chi phí để học.
         <br>
-        Bạn có thể trao dồi thêm kĩ năng mới cho mình tại Swappal.
-        <br>
-        Đặc biệt, Swappal cũng đem mọi người đến gần nhau hơn.
+        Bạn có thể học các kĩ năng mới qua việc trao đổi với các thành viên của Swappal ở khắp đất nước VN.
     </div>
     <div id="flip2">
-      <h3 class="faqstitle">Làm thế nào để đăng ký?</h3>
+      <h3 class="faqstitle">Làm thể nào để tham gia vào Swappal?</h3>
     </div>
-    <div id="panel2">Để tham gia vào cộng đồng của chúng tôi rất đơn giản về dễ dàng.Nhấp vào <a href="register">ĐĂNG KÝ</a>
-    và bạn có thể bắt đầu việc trao đổi với những người khác.
+    <div id="panel2">Tham gia vào cộng đồng trao đổi của chúng tôi hoàn toàn miễn phí và rất dễ. Chỉ cần bạn đăng kí tạo mới tài khoảnlà có thể <a href="register">BẮT ĐẦU SỬ DỤNG</a>
+    Swappal
   </div>
   <div id="flip3">
     <h3 class="faqstitle">Tôi có cần phải trả cho bất cứ chi phí nào không?</h3>
