--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -4,7 +4,7 @@
       <div class="searchBar">
         <form class="form-inline">
           <div class="row">
-              <input type="search" class="form-control" placeholder="What are you looking for?" style="width:550px; height:50px;border-radius:50px;">
+              <input type="search" class="form-control" placeholder="Bạn cần tìm kiếm kỹ năng gì ?" style="width:550px; height:50px;border-radius:50px;">
               <button type="submit" class="btn btn-default"
               style="margin-left:5px; width:60px; height:50px;color:#222930;background-color:white;border-radius:50px;"
               routerLink="/search" routerLinkActive="active">
@@ -74,7 +74,7 @@
         <div class="col-md-2" style="background-color:white;" >
           <div class="flex-container-column">
             <div class="flex-highestrating-title">
-              <h3>THÀNH VIÊN ƯU TÚ</h3>
+              <h3>Người dùng nổi bật</h3>
             </div>
             <div class="flex-highestrating-content">
               <!-- <ul>
