--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -18,9 +18,9 @@
           <div class="form-group">
             <button class="btn-social-facebook"></button>
           </div>
-          <div class="form-group">
+          <!-- <div class="form-group">
             <button class="btn-social-google"></button>
-          </div>
+          </div> -->
       </form>
   </div>
 </div>
